添加知识库和嵌入和使用功能